resources/app-sre/cincinnati-production/cincinnati.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: cincinnati-policy-engine
  name: cincinnati-route-prod
spec:
  host: ynkpvft2b33mrat.api.openshift.com
  port:
    targetPort: policy-engine
  to:
    kind: Service
    name: cincinnati-policy-engine
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
